# A5Yinsh

./: .gitignore  README.md  heuristic.cpp  heuristic.h  main.cpp  meson.build  move.cpp  move.h  moves.txt  state.cpp  state.h  test_heuristic.cpp
